# llama-receipts

./: Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml  run.sh  setup.cfg
configs/: deepspeed.json
dialogues/: receipts_dataset.jsonl
src/: cli.py
src/generation/: callbacks.py  generate.py
src/trainer/: callbacks.py  train_qlora.py
