[tool.poetry]
name = "llama-receipts"
version = "0.1.0"
description = ""
authors = ["a.khokhulin <a.khokhulin@tinkoff.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bitsandbytes = "0.39.0"
datasets = "2.12.0"
loguru = "0.7.0"
peft = "0.8.2"
torch = "^2.0.0"
transformers = "4.37"
sentencepiece = "0.1.99"
scipy = "^1.0.1"
accelerate = ">=0.15.0"
deepspeed = ">=0.9.0"
fire = "0.5.0"
wandb = "0.15.3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
boto3-stubs = "^1.28.63"
faker = "^20.0.3"
isort = "^5.12.0"
locust = "^2.18.3"
mypy = "^1.5.1"
mypy-extensions = "^1.0.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-random-order = "^1.1.0"
pytest-xdist = "^3.3.1"
toml-sort = "^0.23.1"

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.tomlsort]
in_place = true
no_sort_tables = true
sort_table_keys = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
